--- a/app/Resources/views/person/new.html.twig
+++ b/app/Resources/views/person/new.html.twig
@@ -13,7 +13,7 @@
             {{ form_row(form.email) }}
             {{ form_row(form.phone) }}
         </div>
-        <input class="btn btn-primary" type="submit" value="Create" />
+        <input class="btn btn-primary" type="submit" value="{% trans %}enroll{% endtrans %}" />
         {{ form_end(form) }}
     </div>
 
