--- a/app/Resources/views/default/lost-plan-password.html.twig
+++ b/app/Resources/views/default/lost-plan-password.html.twig
@@ -2,7 +2,7 @@
 
 {% block body %}
     <div class="col-12">
-        <h1>Recover password for plan: {{ plan.title }}</h1>
+        <h1>{% trans %}recover_password_title{% endtrans %}: {{ plan.title }}</h1>
         {% if not success %}
             {{ form_start(form) }}
             {% if not form.vars.valid and form.vars.errors[0].message is defined %}
@@ -14,11 +14,11 @@
                 {{ form_label(form.email) }}
                 {{ form_widget(form.email) }}
             </div>
-            <input class="btn btn-primary" type="submit" value="recover"/>
+            <input class="btn btn-primary" type="submit" value="{% trans %}recover{% endtrans %}"/>
             {{ form_end(form) }}
         {% else %}
-            <div class="alert alert-success">Please check your email inbox</div>
-            <a href="{{ path('plan_show', { 'id': plan.id }) }}" class="btn btn-primary">back</a>
+            <div class="alert alert-success">{% trans %}check_email{% endtrans %}</div>
+            <a href="{{ path('plan_show', { 'id': plan.id }) }}" class="btn btn-primary">{% trans %}back{% endtrans %}</a>
         {% endif %}
     </div>
 {% endblock %}
