--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -45,6 +45,7 @@
                         <a class="nav-link pull-right" href="{{ path('fos_user_security_logout') }}"><i class="fa fa-sign-out" aria-hidden="true"></i></a>
                     {% else %}
                         <li class="nav-item text-nowrap"><a class="nav-link" href="{{ path('fos_user_security_login') }}"><i class="fa fa-sign-in" aria-hidden="true"></i> {% trans %}login{% endtrans %}</a></li>
+                        <li class="nav-item text-nowrap"><a class="nav-link" href="{{ path('fos_user_registration_register') }}"><i class="fa fa-user-plus" aria-hidden="true"></i> {% trans %}register{% endtrans %}</a></li>
                     {% endif %}
                     <li class="nav-item text-nowrap"><a class="nav-link" href="{{ path('about') }}"><i class="fa fa-question-circle-o" aria-hidden="true"></i></a></li>
                 </ul>
