remove route for now

--- a/app/Resources/views/plan/show.html.twig
+++ b/app/Resources/views/plan/show.html.twig
@@ -102,7 +102,7 @@
                     {{ form_widget(password_form.password) }}
                 </div>
                 <div class="modal-footer">
-                    <a href="{{ path('recover_plan_password', { 'plan': plan.id }) }}">{% trans %}lost_password{% endtrans %}</a>
+                    <a href="#">{% trans %}lost_password{% endtrans %}</a>
                     <input class="btn btn-primary" type="submit" value="{% trans %}submit{% endtrans %}" />
                 </div>
             </div>
