--- a/app/Resources/views/plan/edit.html.twig
+++ b/app/Resources/views/plan/edit.html.twig
@@ -11,7 +11,8 @@
                 {{ form_errors(edit_form.title) }}
                 {{ form_widget(edit_form.title) }}
                 <div {% if plan.isTemplate %}style="display: none"{% endif %}>
-                {{ form_row(edit_form.date) }}
+                    {{ form_row(edit_form.date) }}
+                    {{ form_row(edit_form.isPublic) }}
                 </div>
                 {{ form_row(edit_form.description) }}
                 <div {% if plan.isTemplate %}style="display: none"{% endif %}>
