--- a/app/Resources/views/plan/new-by-template.html.twig
+++ b/app/Resources/views/plan/new-by-template.html.twig
@@ -9,7 +9,13 @@
         <div class="col-12">
             {{ form_start(form) }}
             <div class="form-group">
-                {{ form_widget(form) }}
+                {{ form_row(form.templates) }}
+                {{ form_row(form.title) }}
+                {{ form_row(form.date) }}
+                <div {% if is_granted('ROLE_USER') %} style="display: none;" {% endif %}>
+                    {{ form_row(form.email) }}
+                </div>
+                {{ form_row(form.description) }}
             </div>
             <input class="btn btn-primary" type="submit" value="{% trans %}create{% endtrans %}" />
             {{ form_end(form) }}
