draft strategy for form creation

--- a/app/Resources/views/plan/new-unauth.html.twig
+++ b/app/Resources/views/plan/new-unauth.html.twig
@@ -12,6 +12,8 @@
             {{ form_row(form.date) }}
             {{ form_row(form.description) }}
             {{ form_row(form.email) }}
+            {{ form_row(form.password.first) }}
+            {{ form_row(form.password.second) }}
         </div>
         <hr>
         <h3>{% trans %}shifts{% endtrans %}</h3>
