--- a/app/Resources/views/plan/by-template/new-by-template-unauth.html.twig
+++ b/app/Resources/views/plan/by-template/new-by-template-unauth.html.twig
@@ -5,16 +5,16 @@
         <h1>{% trans %}new_by_template_title{% endtrans %}</h1>
     </div>
 
-    {% if plans is not empty %}
+    {% if form.templates.vars.choices is not empty %}
         <div class="col-12">
             {{ form_start(form) }}
             <div class="form-group">
                 {{ form_row(form.templates) }}
                 {{ form_row(form.title) }}
                 {{ form_row(form.date) }}
-                <div {% if is_granted('ROLE_USER') %} style="display: none;" {% endif %}>
-                    {{ form_row(form.email) }}
-                </div>
+                {{ form_row(form.email) }}
+                {{ form_row(form.password.first) }}
+                {{ form_row(form.password.second) }}
                 {{ form_row(form.description) }}
             </div>
             <input class="btn btn-primary" type="submit" value="{% trans %}create{% endtrans %}" />
