remove session stuff, dont show details to non owner

--- a/app/Resources/views/plan/show.html.twig
+++ b/app/Resources/views/plan/show.html.twig
@@ -2,10 +2,6 @@
 
 {% block body %}
 
-    {% if app.session.get(plan.id) %}
-        {% set showDetails=true %}
-    {% endif %}
-
     <div class="col-12 d-flex justify-content-end">
         <h1 class="mr-auto p-2">{% if plan.isTemplate %}Template:{% endif %} {{ plan.title }}</h1>
         {% if not plan.isTemplate %}<h6 class="p-2">{% if plan.date %}{{ plan.date|date('d.m.Y') }}{% endif %}</h6>{% endif %}
@@ -20,7 +16,7 @@
     {% endif %}
 
     <div class="col-12">
-        {% if not (showDetails or is_granted('ROLE_USER'))%}
+        {% if not (is_granted('ROLE_USER') and app.user.id == plan.user.id)%}
             <a id="passwordPrompt" href="#" class="pull-right"><i class="fa fa-eye" aria-hidden="true"></i> {% trans %}show_details{% endtrans %}</a>
         {% endif %}
 
@@ -48,7 +44,7 @@
 
                                 {% for person in shift.people %}
                                     {% if not plan.isTemplate %}
-                                        {% if (showDetails or is_granted('ROLE_USER')) %}
+                                        {% if (is_granted('ROLE_USER') and app.user.id == plan.user.id) %}
                                             <li>{{ person.name }} {% if is_granted('ROLE_USER') %}<a href="{{ path('person_edit',{ 'id': person.id }) }}"><i class="fa fa-pencil" aria-hidden="true"></i></a>{% endif %}
 
                                                 <ul>
