added time picker

--- a/app/Resources/views/plan/edit.html.twig
+++ b/app/Resources/views/plan/edit.html.twig
@@ -1,4 +1,5 @@
 {% extends 'base.html.twig' %}
+{% form_theme edit_form 'form/fields.html.twig' %}
     {% block body %}
         <div class="col-12">
             <h1>{% trans %}edit{% endtrans %}</h1>
