--- a/app/Resources/views/plan/new-unauth.html.twig
+++ b/app/Resources/views/plan/new-unauth.html.twig
@@ -1,5 +1,5 @@
 {% extends 'base.html.twig' %}
-
+{% form_theme form 'form/fields.html.twig' %}
 {% block body %}
     <div class="col-12">
         <h1>{% trans %}new_shift_plan{% endtrans %}</h1>
