--- a/app/Resources/FOSUserBundle/views/Profile/show_content.html.twig
+++ b/app/Resources/FOSUserBundle/views/Profile/show_content.html.twig
@@ -4,7 +4,7 @@
     <div class="card">
         <img class="card-img-top" src="https://media.giphy.com/media/n0XxXXUWyxkm4/giphy.gif" alt="Card image cap">
         <div class="card-block">
-            <h4 class="card-title">Your Profile</h4>
+            <h4 class="card-title">{{ 'your_profile'|trans([], 'messages', null) }}</h4>
             <p class="card-text">
                 <p>
                     <b>{{ 'profile.show.username'|trans }}:</b> {{ user.username }}
