--- a/src/AppBundle/Resources/public/css/general.css
+++ b/src/AppBundle/Resources/public/css/general.css
@@ -36,3 +36,23 @@ a:hover {
 .form-group > div > ul > li {
     color: #A94442;
 }
+
+html {
+    position: relative;
+    min-height: 100%;
+}
+
+body {
+    /* Margin bottom by footer height */
+    margin-bottom: 70px;
+}
+
+.footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    /* Set the fixed height of the footer here */
+    height: 60px;
+    line-height: 60px; /* Vertically center the text there */
+    background-color: #f5f5f5;
+}
