--- a/app/Resources/views/email/plan-password.html.twig
+++ b/app/Resources/views/email/plan-password.html.twig
@@ -1,9 +1,9 @@
-<h1>You successfully created a new shift plan!</h1>
+<h1>You created a new shift plan!</h1>
 
 <p>
-    To see who enrolled for your shifts you'll need the following password: <b>{{ password }}</b>
+    To see who enrolled for your shifts you'll need to login.</b>
 </p>
 
 <p>
-    The link to your shift plan: <a href="{{ url('plan_show',{ 'id': plan_id }) }}">{{ url('plan_show',{ 'id': plan_id }) }}</a>
+    You can find your shift plan here: <a href="{{ url('plan_show',{ 'id': plan_id }) }}">{{ url('plan_show',{ 'id': plan_id }) }}</a>
 </p>
