--- a/app/Resources/views/email/plan-password.txt.twig
+++ b/app/Resources/views/email/plan-password.txt.twig
@@ -1,5 +1,5 @@
-You successfully created a new shift plan!
+You created a new shift plan!
 
-To see who enrolled for your shifts you'll need the following password: {{ password }}
+To see who enrolled for your shifts you'll need to login.
 
-The link to your shift plan: {{ url('plan_show',{ 'id': plan_id }) }}
+Your shift plan: {{ url('plan_show',{ 'id': plan_id }) }}
