--- a/app/Resources/FOSUserBundle/views/Registration/confirmed.html.twig
+++ b/app/Resources/FOSUserBundle/views/Registration/confirmed.html.twig
@@ -5,5 +5,6 @@
 {% block fos_user_content %}
     <div class="col-12">
         <div class="alert alert-success">{{ 'registration.confirmed'|trans({'%username%': user.username}) }}</div>
+        <a class="btn btn-md btn-primary" href="{{ path('plan_new') }}" role="button">{{ 'create_shift_plan'|trans([], 'messages', null) }} </a>
     </div>
 {% endblock fos_user_content %}
