added mail translations

--- a/app/Resources/views/email/plan-password.txt.twig
+++ b/app/Resources/views/email/plan-password.txt.twig
@@ -1,5 +1,7 @@
-You created a new shift plan!
+{{ 'email_shift_link_title'|trans }}
 
-To see who enrolled for your shifts you'll need to login.
+{{ 'email_shift_link_body_text'|trans }}
 
-Your shift plan: {{ url('plan_show',{ 'id': plan_id }) }}
+{{ 'email_shift_link_text'|trans }} <a href="{{ url('plan_show',{ 'id': plan_id }) }}">{{ url('plan_show',{ 'id': plan_id }) }}</a>
+
+{{ 'email_shift_link_end'|trans }}
