--- a/app/Resources/views/email/plan-password.html.twig
+++ b/app/Resources/views/email/plan-password.html.twig
@@ -1,9 +1,11 @@
-<h1>You created a new shift plan!</h1>
+<h1>{{ 'email_shift_link_title'|trans }}</h1>
 
 <p>
-    To see who enrolled for your shifts you'll need to login.</b>
+    {{ 'email_shift_link_body_html'|trans }}
 </p>
 
 <p>
-    You can find your shift plan here: <a href="{{ url('plan_show',{ 'id': plan_id }) }}">{{ url('plan_show',{ 'id': plan_id }) }}</a>
+    {{ 'email_shift_link_text'|trans }} <a href="{{ url('plan_show',{ 'id': plan_id }) }}">{{ url('plan_show',{ 'id': plan_id }) }}</a>
 </p>
+
+{{ 'email_shift_link_end'|trans }}
