--- a/app/Resources/views/plan/index-template.html.twig
+++ b/app/Resources/views/plan/index-template.html.twig
@@ -12,6 +12,7 @@
             <tr>
                 <th>{{ knp_pagination_sortable(pagination, 'title'|trans, 'p.title') }} <i class="fa fa-sort" aria-hidden="true"></i></th>
                 <th>{% trans %}description{% endtrans %}</th>
+                <th>{% trans %}public{% endtrans %}</th>
                 <th>{% trans %}actions{% endtrans %}</th>
             </tr>
             </thead>
@@ -20,6 +21,13 @@
                 <tr>
                     <th><a href="{{ path('plan_show', { 'id': plan.id }) }}">{{ plan.title }}</a></th>
                     <td>{{ plan.description }}</td>
+                    <td>
+                        {% if plan.isPublic %}
+                            <i class="fa fa-check" aria-hidden="true"></i>
+                        {% else %}
+                            <i class="fa fa-cross" aria-hidden="true"></i>
+                        {% endif %}
+                    </td>
                     <td><a href="{{ path('plan_edit', { 'id': plan.id }) }}">edit</a></td>
                 </tr>
             {% endfor %}
