--- a/app/Resources/views/plan/index-template.html.twig
+++ b/app/Resources/views/plan/index-template.html.twig
@@ -25,7 +25,7 @@
                         {% if plan.isPublic %}
                             <i class="fa fa-check" aria-hidden="true"></i>
                         {% else %}
-                            <i class="fa fa-cross" aria-hidden="true"></i>
+                            <i class="fa fa-times" aria-hidden="true"></i>
                         {% endif %}
                     </td>
                     <td><a href="{{ path('plan_edit', { 'id': plan.id }) }}">edit</a></td>
