--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -6,7 +6,7 @@
         <p class="lead">{% trans %}home_description{% endtrans %} <a href="https://schichtplan.immerda.ch">schichtplan.immerda.ch</a></p>
         <hr class="my-4">
         <p class="lead">
-            <a class="btn btn-md btn-primary" href="{{ path('plan_new_by_template') }}" role="button">{% trans %}create_shift_plan{% endtrans %}</a>
+            <a class="btn btn-md btn-primary" href="{{ path('plan_new') }}" role="button">{% trans %}create_shift_plan{% endtrans %}</a>
         </p>
     </div>
 {% endblock %}
