testing create plan form unauth - fixed bugs

--- a/src/AppBundle/Resources/public/css/general.css
+++ b/src/AppBundle/Resources/public/css/general.css
@@ -33,8 +33,8 @@ a:hover {
     color: #fe7101;
 }
 
-.form-group > div > ul > li {
-    color: #A94442;
+.error-list > li {
+    background-color: #F2DEDE !important;
 }
 
 html {
