--- a/app/Resources/views/form/form_errors.html.twig
+++ b/app/Resources/views/form/form_errors.html.twig
@@ -1,9 +1,11 @@
 {% block form_errors -%}
     {% if errors|length > 0 -%}
-        <ul class="error_list">
-            {%- for error in errors -%}
-                <li>{{ error.message }}</li>
-            {%- endfor -%}
-        </ul>
+        <div class="alert alert-danger">
+            <ul class="error-list">
+                {%- for error in errors -%}
+                    <li>{{ error.message }}</li>
+                {%- endfor -%}
+            </ul>
+        </div>
     {%- endif %}
 {%- endblock form_errors %}
