--- a/app/Resources/views/form/form_errors.html.twig
+++ b/app/Resources/views/form/form_errors.html.twig
@@ -1,11 +1,9 @@
 {% block form_errors -%}
     {% if errors|length > 0 -%}
         <div class="alert alert-danger">
-            <ul class="error-list">
-                {%- for error in errors -%}
-                    <li>{{ error.message }}</li>
-                {%- endfor -%}
-            </ul>
+            {%- for error in errors -%}
+                <i class="fa fa-exclamation-triangle" aria-hidden="true"></i> {{ error.message }}
+            {%- endfor -%}
         </div>
     {%- endif %}
 {%- endblock form_errors %}
