--- a/app/Resources/views/person/new.html.twig
+++ b/app/Resources/views/person/new.html.twig
@@ -13,6 +13,11 @@
                 {{ form_row(form.email) }}
                 {{ form_row(form.phone) }}
             </div>
+            {% if form.vars.errors %}
+                <div class="alert alert-danger">
+                    {{ form.vars.errors[0].message }}
+                </div>
+            {% endif %}
             <input class="btn btn-primary" type="submit" value="{% trans %}enroll{% endtrans %}" />
         {{ form_end(form) }}
     </div>
