--- a/app/Resources/FOSUserBundle/views/Group/show_content.html.twig
+++ b/app/Resources/FOSUserBundle/views/Group/show_content.html.twig
@@ -1,5 +1,5 @@
 {% trans_default_domain 'FOSUserBundle' %}
 
-<div class="fos_user_group_show">
-    <p>{{ 'group.show.name'|trans }}: {{ group.getName() }}</p>
+<div class="col-12">
+    {{ 'group.show.name'|trans }}: {{ group.getName() }}
 </div>
