--- a/app/Resources/views/shift/index.html.twig
+++ b/app/Resources/views/shift/index.html.twig
@@ -6,42 +6,21 @@
     <table class="table-responsive">
         <thead>
             <tr>
-                <th>Id</th>
                 <th>Title</th>
                 <th>Description</th>
                 <th>Start</th>
                 <th>End</th>
-                <th>Numberpeople</th>
-                <th>Actions</th>
             </tr>
         </thead>
         <tbody>
-        {% for shift in shifts %}
+        {% for shift in pagination %}
             <tr>
-                <td><a href="{{ path('shift_show', { 'id': shift.id }) }}">{{ shift.id }}</a></td>
-                <td>{{ shift.title }}</td>
+                <td><a href="{{ path('shift_show', { 'id': shift.id }) }}">{{ shift.title }}</a></td>
                 <td>{{ shift.description }}</td>
-                <td>{% if shift.start %}{{ shift.start|date('Y-m-d H:i:s') }}{% endif %}</td>
-                <td>{% if shift.end %}{{ shift.end|date('Y-m-d H:i:s') }}{% endif %}</td>
-                <td>{{ shift.numberPeople }}</td>
-                <td>
-                    <ul>
-                        <li>
-                            <a href="{{ path('shift_show', { 'id': shift.id }) }}">show</a>
-                        </li>
-                        <li>
-                            <a href="{{ path('shift_edit', { 'id': shift.id }) }}">edit</a>
-                        </li>
-                    </ul>
-                </td>
+                <td>{% if shift.start %}{{ shift.start|date('H:i') }}{% endif %}</td>
+                <td>{% if shift.end %}{{ shift.end|date('H:i') }}{% endif %}</td>
             </tr>
         {% endfor %}
         </tbody>
     </table>
-
-    <ul>
-        <li>
-            <a href="{{ path('shift_new') }}">Create a new shift</a>
-        </li>
-    </ul>
 {% endblock %}
