--- a/app/Resources/views/shift/index.html.twig
+++ b/app/Resources/views/shift/index.html.twig
@@ -1,34 +1,38 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <h1>Shifts list</h1>
-
-    <table class="table table-responsive">
-        <thead class="thead-default">
-            <tr>
-                <th>Title</th>
-                <th>Description</th>
-                <th>Start</th>
-                <th>End</th>
-            </tr>
-        </thead>
-        <tbody>
-        {% for shift in pagination %}
-            <tr>
-                <td><a href="{{ path('shift_show', { 'id': shift.id }) }}">{{ shift.title }}</a></td>
-                <td>{{ shift.description }}</td>
-                <td>{% if shift.start %}{{ shift.start|date('H:i') }}{% endif %}</td>
-                <td>{% if shift.end %}{{ shift.end|date('H:i') }}{% endif %}</td>
-            </tr>
-        {% endfor %}
-        </tbody>
-    </table>
-    <div class="navigation">
-        {{ knp_pagination_render(pagination) }}
+    <div class="col-12">
+        <h1>{{ 'your_shifts'|trans }}</h1>
     </div>
-    {% if pagination|length < 1%}
-        <div class="alert alert-warning" role="alert">
-            {% trans %}no_shifts{% endtrans %}
+
+    <div class="col-12">
+        <table class="table table-responsive">
+            <thead class="thead-default">
+            <tr>
+                <th>{{ knp_pagination_sortable(pagination, 'title'|trans, 's.title') }} <i class="fa fa-sort" aria-hidden="true"></i></th>
+                <th>{{ 'description'|trans }}</th>
+                <th>{{ knp_pagination_sortable(pagination, 'start'|trans, 's.start') }} <i class="fa fa-sort" aria-hidden="true"></i></th>
+                <th>{{ knp_pagination_sortable(pagination, 'end'|trans, 's.end') }} <i class="fa fa-sort" aria-hidden="true"></i></th>
+            </tr>
+            </thead>
+            <tbody>
+            {% for shift in pagination %}
+                <tr>
+                    <td><a href="{{ path('plan_show', { 'id': shift.plan.id }) }}">{{ shift.title }}</a></td>
+                    <td>{{ shift.description }}</td>
+                    <td>{% if shift.start %}{{ shift.start|date('H:i') }}{% endif %}</td>
+                    <td>{% if shift.end %}{{ shift.end|date('H:i') }}{% endif %}</td>
+                </tr>
+            {% endfor %}
+            </tbody>
+        </table>
+        <div class="navigation">
+            {{ knp_pagination_render(pagination) }}
         </div>
-    {% endif %}
+        {% if pagination|length < 1%}
+            <div class="alert alert-warning" role="alert">
+                {% trans %}no_shifts{% endtrans %}
+            </div>
+        {% endif %}
+    </div>
 {% endblock %}
