--- a/src/AppBundle/Resources/public/css/plan.css
+++ b/src/AppBundle/Resources/public/css/plan.css
@@ -1,10 +1,9 @@
 .shifts li {
     padding: 0.5rem;
-    background-color: rgba(253, 245, 154, 0.32);
+    background-color: #dcedc8;
     margin-top: 0.5rem;
-    border-radius: 10px;
 }
 
 .shifts li:nth-child(even)  {
-    background-color: rgba(255, 210, 175, 0.73);
+    background-color: #ffecb3;
 }
