--- a/app/Resources/views/plan/show.html.twig
+++ b/app/Resources/views/plan/show.html.twig
@@ -32,8 +32,9 @@
         {% endif %}
 
         {% if plan.shifts is not empty %}
-            <table style="width: 100%" class="table table-responsive ">
-                <thead class="thead-default">
+        <div class="table-responsive">
+            <table class="table">
+                <thead>
                 <tr>
                     <th>{% trans %}title{% endtrans %}</th>
                     <th>{% trans %}start{% endtrans %}</th>
@@ -86,6 +87,7 @@
                 {% endfor %}
                 </tbody>
             </table>
+        </div>
         {% else %}
             <div class="alert alert-warning" role="alert">
                 <strong>{% trans %}warning{% endtrans %}!</strong> {% trans %}no_shifts_defined{% endtrans %}
