restyle index and new

--- a/app/Resources/views/form/fields.html.twig
+++ b/app/Resources/views/form/fields.html.twig
@@ -1,8 +1,12 @@
 {%- block time_widget -%}
     <div class="input-group clockpicker" {{ block('widget_container_attributes') }}>
         <input id="{{ form.vars.id }}" name="{{ form.vars.full_name }}" type="text" class="form-control" value="09:30">
-        <span class="input-group-addon">
-            <span class="fa fa-clock-o" aria-hidden="true"></span>
-        </span>
     </div>
 {%- endblock time_widget -%}
+{%- block checkbox_widget -%}
+    <div class="form-check">
+        <label class="form-check-label">
+            <input class="form-check-input"  type="checkbox" {{ block('widget_attributes') }}{% if value is defined %} value="{{ value }}"{% endif %}{% if checked %} checked="checked"{% endif %} />
+        </label>
+    </div>
+{%- endblock checkbox_widget -%}
