--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -69,8 +69,8 @@
         </div>
         <footer class="footer">
             <div class="container">
-                <span class="text-muted">{{ 'footer_text'|trans }} <a href="mailto:jan.friedli@gmx.ch">Jan Friedli</a></span>
-                <span class="text-muted pull-right">{{ 'footer_source_code'|trans }}: <a href="https://github.com/fribim/akut-shift-planner">GitHub</a></span>
+                <span><small>{{ 'footer_text'|trans }} <a href="mailto:jan.friedli@gmx.ch">Jan Friedli</a></small></span>
+                <span class="pull-right"><small>{{ 'footer_source_code'|trans }}: <a href="https://github.com/fribim/akut-shift-planner">GitHub</a></small></span>
             </div>
         </footer>
         {% block javascripts %}{% endblock %}
