--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -2,9 +2,9 @@
 
 {% block body %}
     <div class="jumbotron col-12">
-        <h1 class="display-3">Schicht-Plan.ch</h1>
-        <p class="lead">{% trans %}home_description{% endtrans %} <a href="https://schichtplan.immerda.ch">schichtplan.immerda.ch</a></p>
-        <hr class="my-4">
+        <h1 class="display-3 h1-responsive">Schicht-Plan.ch</h1>
+        <h6 class="h6-responsive">{% trans %}home_description{% endtrans %} <a href="https://schichtplan.immerda.ch">schichtplan.immerda.ch</a></h6>
+        <hr>
         <p class="lead">
             <a class="btn btn-md btn-primary" href="{{ path('plan_new') }}" role="button">{% trans %}create_shift_plan{% endtrans %}</a>
         </p>
